use List.of instead of Arrays.asList for diagnosis tests