@@ -465,7 +465,7 @@ public class CarrierClaimTransformerV2Test {
         TransformerTestUtilsV2.createDiagnosis(
             // Order doesn't matter
             diag1.getSequence(),
-            Arrays.asList(
+            List.of(
                 new Coding(
                     "http://hl7.org/fhir/sid/icd-10-cm", "A02", "OTHER SALMONELLA INFECTIONS"),
                 new Coding("http://hl7.org/fhir/sid/icd-10", "A02", "OTHER SALMONELLA INFECTIONS")),
@@ -483,7 +483,7 @@ public class CarrierClaimTransformerV2Test {
         TransformerTestUtilsV2.createDiagnosis(
             // Order doesn't matter
             diag2.getSequence(),
-            Arrays.asList(
+            List.of(
                 new Coding("http://hl7.org/fhir/sid/icd-10-cm", "A06", "AMEBIASIS"),
                 new Coding("http://hl7.org/fhir/sid/icd-10", "A06", "AMEBIASIS")),
             new Coding(
@@ -502,7 +502,7 @@ public class CarrierClaimTransformerV2Test {
         TransformerTestUtilsV2.createDiagnosis(
             // Order doesn't matter
             diag3.getSequence(),
-            Arrays.asList(
+            List.of(
                 new Coding("http://hl7.org/fhir/sid/icd-10-cm", "B04", "MONKEYPOX"),
                 new Coding("http://hl7.org/fhir/sid/icd-10", "B04", "MONKEYPOX")),
             new Coding(
@@ -521,7 +521,7 @@ public class CarrierClaimTransformerV2Test {
         TransformerTestUtilsV2.createDiagnosis(
             // Order doesn't matter
             diag4.getSequence(),
-            Arrays.asList(
+            List.of(
                 new Coding("http://hl7.org/fhir/sid/icd-10-cm", "B05", "MEASLES"),
                 new Coding("http://hl7.org/fhir/sid/icd-10", "B05", "MEASLES")),
             new Coding(
@@ -540,7 +540,7 @@ public class CarrierClaimTransformerV2Test {
         TransformerTestUtilsV2.createDiagnosis(
             // Order doesn't matter
             diag5.getSequence(),
-            Arrays.asList(
+            List.of(
                 new Coding("http://hl7.org/fhir/sid/icd-10-cm", "A52", "LATE SYPHILIS"),
                 new Coding("http://hl7.org/fhir/sid/icd-10", "A52", "LATE SYPHILIS")),
             new Coding(
