@@ -251,7 +251,7 @@ public final class DMEClaimTransformerV2Test {
         TransformerTestUtilsV2.createDiagnosis(
             // Order doesn't matter
             diag1.getSequence(),
-            Arrays.asList(
+            List.of(
                 new Coding("http://hl7.org/fhir/sid/icd-10-cm", "B04", "MONKEYPOX"),
                 new Coding("http://hl7.org/fhir/sid/icd-10", "B04", "MONKEYPOX")),
             new Coding(
@@ -270,7 +270,7 @@ public final class DMEClaimTransformerV2Test {
         TransformerTestUtilsV2.createDiagnosis(
             // Order doesn't matter
             diag2.getSequence(),
-            Arrays.asList(
+            List.of(
                 new Coding("http://hl7.org/fhir/sid/icd-10-cm", "A37", "WHOOPING COUGH"),
                 new Coding("http://hl7.org/fhir/sid/icd-10", "A37", "WHOOPING COUGH")),
             new Coding(
@@ -289,7 +289,7 @@ public final class DMEClaimTransformerV2Test {
         TransformerTestUtilsV2.createDiagnosis(
             // Order doesn't matter
             diag3.getSequence(),
-            Arrays.asList(
+            List.of(
                 new Coding("http://hl7.org/fhir/sid/icd-10-cm", "A25", "RAT-BITE FEVERS"),
                 new Coding("http://hl7.org/fhir/sid/icd-10", "A25", "RAT-BITE FEVERS")),
             new Coding(
